Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80668

QRhi Metal backend asserts when disabling all lights in Quick 3D PoC demo?

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15.0 Alpha
    • 5.15
    • Qt RHI
    • None
    • 4639660dedceba7c16e1a8110bba16eff30be312 (qt/qtbase/5.15)

    Description

      Investigate the ASSERT: "binding == curBinding + 1" in file rhi/qrhi_p_p.h, line 406 that happens when enabling lighting and then making the light count 0 in the Quick3D RHI test.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes