Make it clear that -1 indicates "unused" in the native binding map

Handling this correctly is up to the Metal backend of QRhi.

Task-number: QTBUG-80668
Change-Id: I4086a8d89a995545e882b4ad4d05b6c14459c1df
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>